<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_quiz_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/LinearLayoutButtonVertical"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">


        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_good_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_score_label_true_answers"
                app:layout_widthPercent="75%"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_good_1_1_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_good_1_1"
                app:layout_widthPercent="25%"
                android:textAlignment="center"
                android:text="0"
                android:textStyle="bold"
                android:textSize="25sp"/>

        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_true_out_1_1_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="25%"
                android:text="0"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tv_true_out_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="50%"
                android:text="@string/activity_score_label_overtime"
                android:layout_toStartOf="@id/tv_true_out_1_1_nb"/>
        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_bad_1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_score_label_wrong_answers"
                app:layout_widthPercent="75%"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_bad_1_1_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_bad_1_1"
                app:layout_widthPercent="25%"
                android:textAlignment="center"
                android:text="0"
                android:textStyle="bold"
                android:textSize="25sp"/>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>


</RelativeLayout>