<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_main_quiz_score"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#777">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/background_quiz">

        <!-- Séparateur d'écran -->
        <View
            android:id="@+id/v_separator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/line_horizontal"
            android:layout_centerVertical="true" />

        <!-- User 1 -->
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_separator">
            <TextView
                android:id="@+id/tv_usr1_main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:layout_widthPercent="50%"
                android:text="Vainqueur : "
                android:textSize="30sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_usr1_main_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_usr1_main_text"
                app:layout_widthPercent="50%"
                android:text="Joueur 1"
                android:textSize="30sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textAlignment="center" />
        </android.support.percent.PercentRelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LinearLayoutButtonVertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Joueur 1"-->
            <!--style="@style/QuizResultPlayer"/>-->

            <TextView
                android:id="@+id/tv_player_1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_score_label_player_one"
                style="@style/QuizResultPlayer"/>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_good_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_true_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_good_1_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_good_1_1"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_true_out_1_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="25%"
                    android:text="0"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/tv_true_out_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="50%"
                    android:text="@string/activity_score_label_overtime"
                    android:layout_toStartOf="@id/tv_true_out_1_1_nb"/>
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_bad_1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_wrong_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_bad_1_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_bad_1_1"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </android.support.percent.PercentRelativeLayout>

            <TextView
                android:id="@+id/tv_player_1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_score_label_player_two"
                style="@style/QuizResultPlayer"/>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_good_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_true_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_good_1_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_good_1_2"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_true_out_1_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="25%"
                    android:text="0"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/tv_true_out_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="50%"
                    android:text="@string/activity_score_label_overtime"
                    android:layout_toStartOf="@id/tv_true_out_1_2_nb"/>
            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_bad_1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_wrong_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_bad_1_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_bad_1_2"
                    app:layout_widthPercent="33%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </android.support.percent.PercentRelativeLayout>

        </LinearLayout>













        <!-- User 2 -->
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/v_separator"
            android:rotation="180"
            android:id="@+id/view">
            <TextView
                android:id="@+id/tv_usr2_main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:layout_widthPercent="50%"
                android:text="@string/activity_score_label_winner"
                android:textSize="30sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tv_usr2_main_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_usr2_main_text"
                app:layout_widthPercent="50%"
                android:text="@string/activity_score_label_player_one"
                android:textSize="30sp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textAlignment="center" />
        </android.support.percent.PercentRelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutUsr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/LinearLayoutButtonVertical"
            android:layout_alignParentStart="true"
            android:rotation="180">


            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_good_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_true_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_good_2_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_good_2_1"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

            </android.support.percent.PercentRelativeLayout>



            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_true_out_2_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="25%"
                    android:text="0"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/tv_true_out_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="50%"
                    android:text="@string/activity_score_label_overtime"
                    android:layout_toStartOf="@id/tv_true_out_2_1_nb"/>
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_bad_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_wrong_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_bad_2_1_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_bad_2_1"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </android.support.percent.PercentRelativeLayout>

            <TextView
                android:id="@+id/tv_player_2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Joueur 2"
                style="@style/QuizResultPlayer"/>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_good_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_true_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_good_2_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_good_2_2"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

            </android.support.percent.PercentRelativeLayout>



            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_true_out_2_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="25%"
                    android:text="0"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/tv_true_out_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="50%"
                    android:text="@string/activity_score_label_overtime"
                    android:layout_toStartOf="@id/tv_true_out_2_2_nb"/>
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_bad_2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_label_wrong_answers"
                    app:layout_widthPercent="75%"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_bad_2_2_nb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_bad_2_2"
                    android:layout_toEndOf="@id/tv_bad_2_2"
                    app:layout_widthPercent="25%"
                    android:textAlignment="center"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
            </android.support.percent.PercentRelativeLayout>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>